@@ -359,8 +359,7 @@ SCM_DEFINE (scm_call_with_dynamic_root, "call-with-dynamic-root", 2, 0, 0,
 	    "      (newline))\n"
 	    "    (lambda (errcode) errcode))))\n"
 	    "@end example\n\n"
-	    "The problem is, on what port will @samp{fnord\n"
-	    "} be displayed?  You\n"
+	    "The problem is, on what port will @samp{fnord} be displayed?  You\n"
 	    "might expect that because of the @code{with-output-to-port} that\n"
 	    "it will be displayed on the port bound to @code{some-port}.  But it\n"
 	    "probably won't -- before evaluating the thunk, dynamic winds are\n"
